--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  width: 900px;
  border: 1px solid #000;
  height: 100px;
- background-color: #181818;
+ background-color: #3aa0ff;
  font-family: Helvetica, sans-serif;
  font-size: 13px;
  border-radius: 10px;
@@ -41,7 +41,7 @@
 #menu ul li a:hover
 {
    color: #FFF;
-   background-color: #81B101;
+   background-color: #01b1b1;
    -webkit-box-shadow: 0px 4px 5px rgba(50, 50, 50, 0.93);
    -moz-box-shadow:    0px 4px 5px rgba(50, 50, 50, 0.93);
    box-shadow:         0px 4px 5px rgba(50, 50, 50, 0.93);
