--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
+   -webkit-box-shadow: 0px 4px 5px rgba(50, 50, 50, 0.93);
+   -moz-box-shadow:    0px 4px 5px rgba(50, 50, 50, 0.93);
+   box-shadow:         0px 4px 5px rgba(50, 50, 50, 0.93);
 }
 #menu ul
 {
